# Wolf

./: CMakeLists.txt  Makefile  RTv1  Wolf  dda.c  map.txt  tmp.txt
includes/: wolf.h
libft/: get_next_line.c
src/: dda.c  free_memory.c  hooks.c  init_ray.c  initialization.c  main.c  player_init.c  raycasting.c  read_map.c  read_map_helper.c  wolf_process.c
walls/: wall0.xpm  wall1.xpm
